force-app/main/default/objects/Comunicacion__c/Comunicacion__c.object-meta.xml
<CustomObject>
    <label>Comunicación</label>
    <nameField>
        <label>Código de la Comunicación</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comunicaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>