force-app/main/default/objects/Comunicacion__c/fields/Fecha_de_Recepcion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Recepcion__c</fullName>
    <label>Fecha de Recepción</label>
    <type>Date</type>
</CustomField>