force-app/main/default/objects/Comunicacion__c/fields/Fecha_de_Respuesta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Respuesta__c</fullName>
    <label>Fecha de Respuesta</label>
    <type>Date</type>
</CustomField>