force-app/main/default/objects/Comunicacion__c/fields/Importe_Penalizacion__c.field-meta.xml
<CustomField>
    <fullName>Importe_Penalizacion__c</fullName>
    <label>Importe Penalización</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>