force-app/main/default/objects/Comunicacion__c/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <label>Proyecto</label>
    <referenceTo>Proyecto__c</referenceTo>
    <relationshipLabel>Comunicaciones</relationshipLabel>
    <relationshipName>Comunicaciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>