force-app/main/default/objects/Comunicacion__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Correo Postal</fullName>
                <default>true</default>
                <label>Correo Postal</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Personalmente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>