force-app/main/default/objects/Comunicacion__c/recordTypes/Acta.recordType-meta.xml
<RecordType>
    <fullName>Acta</fullName>
    <active>true</active>
    <description>Comunicación que representa un Acta</description>
    <label>Acta</label>
</RecordType>