force-app/main/default/objects/Comunicacion__c/recordTypes/Correo_Electronico.recordType-meta.xml
<RecordType>
    <fullName>Correo_Electronico</fullName>
    <active>true</active>
    <description>Comunicación que representa un Correo Electrónico</description>
    <label>Correo Electrónico</label>
</RecordType>