force-app/main/default/objects/Comunicacion__c/recordTypes/Oficio.recordType-meta.xml
<RecordType>
    <fullName>Oficio</fullName>
    <active>true</active>
    <description>Comunicación que representa un Oficio Enviado o Recibido.</description>
    <label>Oficio</label>
</RecordType>