force-app/main/default/objects/Comunicacion__c/listViews/Ciudad_de_la_Justicia_de_Alicante.listView-meta.xml
<ListView>
    <fullName>Ciudad_de_la_Justicia_de_Alicante</fullName>
    <columns>NAME</columns>
    <columns>Nombre__c</columns>
    <columns>Tipo__c</columns>
    <columns>Estado__c</columns>
    <columns>Categoria__c</columns>
    <columns>Remitente__c</columns>
    <columns>DestinatarioPrincipal__c</columns>
    <columns>Fecha_de_Recepcion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>Ciudad de la Justicia de Alicante</value>
    </filters>
    <label>Ciudad de la Justicia de Alicante</label>
    <sharedTo>
        <group>Ciudad_Justicia_Alicante</group>
    </sharedTo>
</ListView>