force-app/main/default/objects/Comunicacion__c/listViews/Gestion_de_la_Calidad_TIC.listView-meta.xml
<ListView>
    <fullName>Gestion_de_la_Calidad_TIC</fullName>
    <columns>NAME</columns>
    <columns>Nombre__c</columns>
    <columns>Tipo__c</columns>
    <columns>Estado__c</columns>
    <columns>Categoria__c</columns>
    <columns>Remitente__c</columns>
    <columns>DestinatarioPrincipal__c</columns>
    <columns>Fecha_de_Recepcion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>Gestión de la Calidad TIC</value>
    </filters>
    <label>Gestión de la Calidad TIC</label>
    <sharedTo>
        <group>Gestion_de_la_Calidad_TIC_Consultores</group>
    </sharedTo>
</ListView>