force-app/main/default/objects/Comunicacion__c/listViews/Gestion_educativa_CCAA_Madrid_RAICES.listView-meta.xml
<ListView>
    <fullName>Gestion_educativa_CCAA_Madrid_RAICES</fullName>
    <columns>NAME</columns>
    <columns>Nombre__c</columns>
    <columns>Tipo__c</columns>
    <columns>Estado__c</columns>
    <columns>Categoria__c</columns>
    <columns>Remitente__c</columns>
    <columns>DestinatarioPrincipal__c</columns>
    <columns>Fecha_de_Recepcion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>Gestión educativa CCAA Madrid. RAICES</value>
    </filters>
    <label>Gestión educativa CCAA Madrid. RAICES</label>
    <sharedTo></sharedTo>
</ListView>