force-app/main/default/objects/Comunicacion__c/listViews/ISU_Agua_de_Quito.listView-meta.xml
<ListView>
    <fullName>ISU_Agua_de_Quito</fullName>
    <columns>NAME</columns>
    <columns>Nombre__c</columns>
    <columns>Tipo__c</columns>
    <columns>Estado__c</columns>
    <columns>Categoria__c</columns>
    <columns>Remitente__c</columns>
    <columns>DestinatarioPrincipal__c</columns>
    <columns>Fecha_de_Recepcion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>ISU Agua de Quito</value>
    </filters>
    <label>ISU Agua de Quito</label>
    <sharedTo></sharedTo>
</ListView>