force-app/main/default/objects/Comunicacion__c/listViews/MINFIN_Ecuador.listView-meta.xml
<ListView>
    <fullName>MINFIN_Ecuador</fullName>
    <columns>NAME</columns>
    <columns>Nombre__c</columns>
    <columns>Tipo__c</columns>
    <columns>Estado__c</columns>
    <columns>Categoria__c</columns>
    <columns>Remitente__c</columns>
    <columns>DestinatarioPrincipal__c</columns>
    <columns>Fecha_de_Recepcion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>MINFIN Ecuador</value>
    </filters>
    <label>MINFIN Ecuador</label>
    <sharedTo>
        <group>MINFIN_Ecuador</group>
    </sharedTo>
</ListView>